Add more testing infrastructure; break hard numpy dependency

--- a/tox.ini
+++ b/tox.ini
@@ -1,2 +1,16 @@
+[tox]
+envlist = py26,py27,pypy
+
+[testenv]
+commands =
+    pip install -e {toxinidir}/..
+    pip install pyglet==1.1.4  # XXX
+    python setup.py test
+
 [pytest]
-pep8ignore = E241
+norecursedirs =
+    build
+    .tox
+    *.egg
+addopts = --pep8
+pep8ignore = E301,E241
