Less magic in rendering tests

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py26,py27,pypy
 commands =
     pip install -e {toxinidir}/..
     pip install pyglet==1.1.4  # XXX
+    python setup.py develop
     python setup.py test
 
 [pytest]
