Reformat code a bit

--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,10 @@ norecursedirs =
     .tox
     *.egg
 addopts = --pep8
-pep8ignore = E301, E241, E128
+pep8ignore =
+    E301
+    E241
+    E128
+    E126
+    E123
+    E124
